Perk Overflow Solved

--- a/src/App.css
+++ b/src/App.css
@@ -2546,7 +2546,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     padding: 1px 1px 1px 1px;
     width: 270px;
-    height: 295px;
+    height: 320px;
     padding: 20px;
   }
 
@@ -2658,7 +2658,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     position: relative;
     top: 1px;
-    left: 5px;
+    right: 15px;
   }
 
   .hamburgerIconContainer {
@@ -2674,7 +2674,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     padding: 1px 1px 1px 1px;
     position: relative;
-    right: 35px;
+    right: 15px;
   }
 
   .download {
@@ -3011,7 +3011,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     padding: 1px 1px 1px 1px;
     width: 270px;
-    height: 295px;
+    height: 320px;
     padding: 20px;
   }
 
@@ -3145,7 +3145,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     padding: 1px 1px 1px 1px;
     position: relative;
-    right: 15px;
+    left: 30px;
   }
 
   .download {
@@ -3153,7 +3153,7 @@ h4.navbarItems:hover {
     padding: 0px;
     position: relative;
     top: 3px;
-    right: 25px;
+    right: 5px;
   }
 
   .download .playstore img {
@@ -3474,7 +3474,7 @@ h4.navbarItems:hover {
     margin: 20px 20px 20px 0px;
     padding: 10px 10px 10px 10px;
     position: relative;
-    right: 30px;
+    right: 10px;
   }
 
   .perks .title {
@@ -3485,7 +3485,7 @@ h4.navbarItems:hover {
   .perks .title h1 {
     margin: 0px 0px 0px 0px;
     position: relative;
-    left: 30px;
+    left: 20px;
   }
 
   .perks .perk-heading {
@@ -3556,7 +3556,7 @@ h4.navbarItems:hover {
 
   .Connect {
     position: relative;
-    right: 45px;
+    right: 35px;
   }
 
   .Connect .con {
@@ -3566,14 +3566,14 @@ h4.navbarItems:hover {
 
   .NavBar.Content {
     position: relative;
-    right: 45px;
+    right: 30px;
     font-size: 0.48em;
   }
 
   .Footer {
     margin: 1px 1px 1px 1px;
     position: relative;
-    right: 35px;
+    right: 10px;
     font-size: 0.48em;
   }
 
@@ -4045,27 +4045,28 @@ h4.navbarItems:hover {
 
   .footer {
     margin: 1px 1px 1px 1px;
+    position: relative;
+    right: 10px;
   }
 
-
   .Logo-Image .footer-img {
-    height: 45px;
-    width: 45px;
+    height: 38px;
+    width: 38px;
     margin: 1px 1px 1px 1px;
     position: relative;
-    right: 0px;
-    bottom: 2px;
+    right: 55px; 
+    top: 5px;
   }
 
   .ContactUs {
     font-size: 0.53em;
     position: relative;
-    right: 0px;
+    right: 45px;
   }
 
   .Connect {
     position: relative;
-    right: 0px;
+    right: 40px;
   }
 
   .Connect .con {
@@ -4075,24 +4076,24 @@ h4.navbarItems:hover {
 
   .NavBar.Content {
     position: relative;
-    right: 0px;
+    right: 30px;
     font-size: 0.48em;
   }
 
   .Footer {
     margin: 1px 1px 1px 1px;
     position: relative;
-    right: 0px;
+    right: 30px;
     font-size: 0.48em;
   }
 
   .social .social-logo {
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
   }
 
   .infos {
-    font-size: 0.52em;
+    font-size: 0.40em;
     padding: 0px;
   }
 }
